# WuHe_Smart_Scanner

./: .gitignore  AGENTS.md  CMakeLists.txt  partitions.csv  sdkconfig.defaults
docs/: 2026-07-04-debug-log.md
main/: CMakeLists.txt  Kconfig.projbuild  MyFont.c  gbk_table.c  gbk_utf8.c  gbk_utf8.h  hid_host_example.c  idf_component.yml  internet_mgr.c  internet_mgr.h  scanner_config.h  screen_display.c  screen_display.h  wuhe_backup.c  wuhe_backup.h  wuhe_cdc_scan.c  wuhe_cdc_scan.h  wuhe_cloud.c  wuhe_cloud.h  wuhe_storage.c  wuhe_storage.h
tools/: gen_gbk_table.py
